--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -380,9 +380,10 @@ var sd = {
 
 <div class="row">
     <div class="text-center" style="font-size:10px">
-        Only simulates the image circle.  Field of View is dependant on lens.
+        Only simulates the image circle. Field of View is dependant on lens. Field of View circles are approximate.
     </div>
 </div>
+
 <div class="row">
     <div class="text-center">
       <div class="col-sm-12">
