--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -119,6 +119,19 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_connections.SSID_PRIORITY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_connections.SSID_PRIORITY(class='form-control bg-secondary') }}
+            <div id="SSID_PRIORITY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            Connection Priority
+        </div>
+    </div>
+
 </div><!-- end wificonnect tab -->
 <div class="tab-pane fade" id="nav-hotspot" role="tabpanel" aria-labelledby="nav-hotspot-tab">
 
@@ -551,6 +564,11 @@ $('#scan-button').on('click', function() {
             $('#SSID_PSK').removeClass('bg-dark');
             $('#SSID_PSK').removeClass('text-secondary');
 
+            $('#SSID_PRIORITY').removeAttr('readonly');
+            $('#SSID_PRIORITY').removeAttr('disabled');
+            $('#SSID_PRIORITY').removeClass('bg-dark');
+            $('#SSID_PRIORITY').removeClass('text-secondary');
+
             $('#connect-button').removeAttr('disabled');
             $("#connect-button").attr("class", "btn btn-success");
 
@@ -597,6 +615,7 @@ $('#connect-button').on('click', function() {
         'INTERFACE' : $('#WIFI_DEVICES_SELECT').val(),
         'AP_PATH' : $('#SSID_SELECT').val(),
         'PSK' : $('#SSID_PSK').val(),
+        'PRIORITY' : $('#SSID_PRIORITY').val(),
     };
 
 
@@ -699,6 +718,11 @@ function init() {
     $('#SSID_PSK').attr('disabled', true);
     $('#SSID_PSK').addClass('bg-dark');
     $('#SSID_PSK').addClass('text-secondary');
+
+    $('#SSID_PRIORITY').attr('readonly', true);
+    $('#SSID_PRIORITY').attr('disabled', true);
+    $('#SSID_PRIORITY').addClass('bg-dark');
+    $('#SSID_PRIORITY').addClass('text-secondary');
 
     $('#connect-button').attr('disabled', true);
     $('#connect-button').attr('class', 'btn btn-secondary');
