--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -57,6 +57,9 @@ var camera_id = {{ camera_id }};
             <hr>
             <button id="autostart-button" class="btn btn-info">Enable auto-start</button>
             <button id="no-autostart-button" class="btn btn-secondary">Disable auto-start</button>
+            <hr>
+            <button id="incpriority-button" class="btn btn-primary">+10 priority</button>
+            <button id="decpriority-button" class="btn btn-secondary">-10 priority</button>
         </div>
         <div class="col-sm-3">
             <input class="form-check-input" id="CONN_CONFIRM1" name="CONN_CONFIRM1" type="checkbox" value="y"> Confirm
@@ -509,6 +512,126 @@ $('#no-autostart-button').on('click', function() {
             $("#no-autostart-button").attr("class", "btn btn-danger");
             $("#no-autostart-button").html(
               'Disable auto-start'
+            );
+
+            var errors = JSON.parse(rdata.responseText);
+
+            $('#failure-message').html(errors['failure-message']);
+            $('#failure-message').css({'display' : 'block'});
+        },
+    });
+});
+
+
+$('#incpriority-button').on('click', function() {
+    $('#success-message').css({'display' : 'none'});
+    $('#failure-message').css({'display' : 'none'});
+
+
+    if (! $("#CONN_CONFIRM1").prop('checked')) {
+        console.log('Confirm checkbox not checked');
+        return;
+    }
+    $("#CONN_CONFIRM1").prop('checked', false);
+
+
+    if ( $('#CONNECTIONS_SELECT').val() == "" ){
+        return;
+    }
+
+
+    $("#incpriority-button").attr("class", "btn btn-info");
+    $("#incpriority-button").html(
+      '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">+10 priority</span>'
+    );
+
+
+    var json_data = {
+        'COMMAND' : 'incpriority',
+        'CONNECTION' : $('#CONNECTIONS_SELECT').val(),
+    };
+
+
+    $.ajax({
+        type: "POST",
+        url: "{{ url_for('indi_allsky.ajax_network_manager_view') }}",
+        contentType: "application/json",
+        data: JSON.stringify(json_data),
+        success: function(rdata){
+            $("#incpriority-button").html(
+              '+10 priority'
+            );
+
+            $('#success-message').html(rdata['success-message']);
+            $('#success-message').css({'display' : 'block'});
+            setTimeout(function() {
+                $('#success-message').css({'display' : 'none'});
+            }, 15000);
+        },
+        error: function(rdata){
+            $("#incpriority-button").attr("class", "btn btn-danger");
+            $("#incpriority-button").html(
+              'Enable auto-start'
+            );
+
+            var errors = JSON.parse(rdata.responseText);
+
+            $('#failure-message').html(errors['failure-message']);
+            $('#failure-message').css({'display' : 'block'});
+        },
+    });
+});
+
+
+$('#decpriority-button').on('click', function() {
+    $('#success-message').css({'display' : 'none'});
+    $('#failure-message').css({'display' : 'none'});
+
+
+    if (! $("#CONN_CONFIRM1").prop('checked')) {
+        console.log('Confirm checkbox not checked');
+        return;
+    }
+    $("#CONN_CONFIRM1").prop('checked', false);
+
+
+    if ( $('#CONNECTIONS_SELECT').val() == "" ){
+        return;
+    }
+
+
+    $("#decpriority-button").attr("class", "btn btn-info");
+    $("#decpriority-button").html(
+      '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">-10 priority</span>'
+    );
+
+
+    var json_data = {
+        'COMMAND' : 'decpriority',
+        'CONNECTION' : $('#CONNECTIONS_SELECT').val(),
+    };
+
+
+    $.ajax({
+        type: "POST",
+        url: "{{ url_for('indi_allsky.ajax_network_manager_view') }}",
+        contentType: "application/json",
+        data: JSON.stringify(json_data),
+        success: function(rdata){
+            $("#decpriority-button").html(
+              '+10 priority'
+            );
+
+            $('#success-message').html(rdata['success-message']);
+            $('#success-message').css({'display' : 'block'});
+            setTimeout(function() {
+                $('#success-message').css({'display' : 'none'});
+            }, 15000);
+        },
+        error: function(rdata){
+            $("#decpriority-button").attr("class", "btn btn-danger");
+            $("#decpriority-button").html(
+              '-10 priority'
             );
 
             var errors = JSON.parse(rdata.responseText);
