--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -540,7 +540,7 @@ $('#incpriority-button').on('click', function() {
     }
 
 
-    $("#incpriority-button").attr("class", "btn btn-info");
+    $("#incpriority-button").attr("class", "btn btn-primary");
     $("#incpriority-button").html(
       '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">+10 priority</span>'
     );
@@ -600,7 +600,7 @@ $('#decpriority-button').on('click', function() {
     }
 
 
-    $("#decpriority-button").attr("class", "btn btn-info");
+    $("#decpriority-button").attr("class", "btn btn-secondary");
     $("#decpriority-button").html(
       '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">-10 priority</span>'
     );
