catch exception if udisks2 not installed

--- a/indi_allsky/flask/templates/drive_manager.html
+++ b/indi_allsky/flask/templates/drive_manager.html
@@ -36,7 +36,7 @@ var camera_id = {{ camera_id }};
 <!-- should be above tab contents -->
 {% if not udisks2_installed %}
 <hr>
-<div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Udisks2 is not available</div>
+<div><span class="badge rounded-pill bg-warning text-dark">Warning</span> UDisks2 is not available</div>
 {% endif %}
 
 <hr>
