--- a/indi_allsky/flask/templates/drive_manager.html
+++ b/indi_allsky/flask/templates/drive_manager.html
@@ -16,6 +16,10 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
 }
+
+#drive-loader {
+  display: block;
+}
 </style>
 <script type="text/javascript">
 var camera_id = {{ camera_id }};
@@ -53,6 +57,7 @@ var camera_id = {{ camera_id }};
             <div id="DRIVES_SELECT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-3">
+            <span id="drive-loader" class="spinner-border" aria-hidden="true"></span>
         </div>
     </div>
 
@@ -110,6 +115,9 @@ function showDrive() {
     }
 
 
+    $('#drive-loader').css({'display' : 'block'});
+
+
     var json_data = {
         'DRIVE_ID' : $('#DRIVES_SELECT').val(),
     };
@@ -121,6 +129,8 @@ function showDrive() {
         contentType: "application/json",
         data: JSON.stringify(json_data),
         success: function(rdata){
+            $('#drive-loader').css({'display' : 'none'});
+
             updateDriveInfo(rdata);
             //$('#success-message').html(rdata['success-message']);
             //$('#success-message').css({'display' : 'block'});
@@ -129,6 +139,8 @@ function showDrive() {
             //}, 15000);
         },
         error: function(rdata){
+            $('#drive-loader').css({'display' : 'none'});
+
             //$("#activate-button").attr("class", "btn btn-danger");
             //$("#activate-button").html(
             //  'Activate'
