--- a/indi_allsky/flask/templates/drive_manager.html
+++ b/indi_allsky/flask/templates/drive_manager.html
@@ -5,7 +5,7 @@
 {% block head %}
 <meta charset="UTF-8">
 <style>
-#nav-drives-tab {
+#nav-drives-tab, #nav-mounts-tab {
 	width: 150px;
 	margin-top: 10px;
 	margin-right: 5px;
@@ -33,6 +33,7 @@ var camera_id = {{ camera_id }};
 <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
     <button class="nav-link link-danger bg-dark active" id="nav-drives-tab" data-bs-toggle="tab" data-bs-target="#nav-drives" type="button" role="tab" aria-controls="nav-drives" aria-selected="true">Drives</button>
+    <button class="nav-link link-light bg-dark" id="nav-mounts-tab" data-bs-toggle="tab" data-bs-target="#nav-mounts" type="button" role="tab" aria-controls="nav-mounts" aria-selected="false">Mounts</button>
   </div>
 </nav>
 
@@ -74,7 +75,23 @@ var camera_id = {{ camera_id }};
             <div id="drive-info"></div>
         </div>
     </div>
-</div><!-- end drives tab -->
+
+  </div><!-- end drives tab -->
+  <div class="tab-pane fade" id="nav-mounts" role="tabpanel" aria-labelledby="nav-mounts-tab">
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_drives.DEVICES_SELECT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_drives.DEVICES_SELECT(class='form-select bg-secondary') }}
+            <div id="DEVICES_SELECT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-1">
+        </div>
+    </div>
+  </div>
+
+</div><!-- end mounts tab -->
 
     <hr> <hr> <hr>
 
