add Unmount function

--- a/indi_allsky/flask/templates/drive_manager.html
+++ b/indi_allsky/flask/templates/drive_manager.html
@@ -87,6 +87,10 @@ var camera_id = {{ camera_id }};
             <div id="DEVICES_SELECT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-1">
+            <button id="unmount-button" class="btn btn-warning">Unmount</button>
+        </div>
+        <div class="col-sm-1">
+            <input class="form-check-input" id="DEVICE_CONFIRM1" name="DEVICE_CONFIRM1" type="checkbox" value="y"> Confirm
         </div>
     </div>
   </div>
@@ -242,9 +246,69 @@ $('#poweroff-button').on('click', function() {
 });
 
 
+$('#unmount-button').on('click', function() {
+    $('#success-message').css({'display' : 'none'});
+    $('#failure-message').css({'display' : 'none'});
+
+
+    if (! $("#DEVICE_CONFIRM1").prop('checked')) {
+        console.log('Confirm checkbox not checked');
+        return;
+    }
+    $("#DEVICE_CONFIRM1").prop('checked', false);
+
+
+    if ( $('#DEVICES_SELECT').val() == "" ){
+        return;
+    }
+
+    $("#unmount-button").attr("class", "btn btn-dark text-danger");
+    $("#unmount-button").html(
+      '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">Unmount</span>'
+    );
+
+
+    var json_data = {
+        'COMMAND' : 'unmount',
+        'DEVICE_ID' : $('#DEVICES_SELECT').val(),
+    };
+
+
+    $.ajax({
+        type: "POST",
+        url: "{{ url_for('indi_allsky.ajax_drive_manager_view') }}",
+        contentType: "application/json",
+        data: JSON.stringify(json_data),
+        success: function(rdata){
+            $("#unmount-button").html(
+              'Unmount'
+            );
+
+            $('#success-message').html(rdata['success-message']);
+            $('#success-message').css({'display' : 'block'});
+            setTimeout(function() {
+                $('#success-message').css({'display' : 'none'});
+            }, 15000);
+
+        },
+        error: function(rdata){
+            $("#unmount-button").attr("class", "btn btn-danger");
+            $("#unmount-button").html(
+              'Unmount'
+            );
+
+            var errors = JSON.parse(rdata.responseText);
+
+            $('#failure-message').html(errors['failure-message']);
+            $('#failure-message').css({'display' : 'block'});
+        },
+    });
+});
+
 
 function init() {
     $("#DRIVE_CONFIRM1").prop('checked', false);
+    $("#DEVICE_CONFIRM1").prop('checked', false);
 
     showDrive();
 }
