--- a/indi_allsky/flask/templates/drive_manager.html
+++ b/indi_allsky/flask/templates/drive_manager.html
@@ -116,7 +116,7 @@ function updateDriveInfo(rdata) {
     var drive_table = $('<table />', {
     });
 
-    fields_list = ['Vendor', 'Model', 'Serial', 'Size', 'ConnectionBus', 'CanPowerOff', 'Ejectable', 'Removable', 'TimeDetected', 'TimeMediaDetected'];
+    fields_list = ['Vendor', 'Model', 'Serial', 'Size', 'Media', 'MediaCompatibility', 'ConnectionBus', 'CanPowerOff', 'Ejectable', 'Removable', 'TimeDetected', 'TimeMediaDetected'];
     fields_list.forEach(item => {
         var tr = $('<tr />', {});
 
