--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -173,6 +173,20 @@ var fullscreen = false;  //initial state
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_CALIBRATE_MANUAL_OFFSET.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_CALIBRATE_MANUAL_OFFSET(class='form-control bg-secondary') }}
+            <div id="IMAGE_CALIBRATE_MANUAL_OFFSET-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Some cameras need a manual offset (libcamera) if darks are not applied.</div>
+            <div>Example: imx477 the offset is 4000 (full 16-bits)</div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -1773,6 +1787,7 @@ const field_names = [
     'LENS_OFFSET_Y',
     'LENS_AZIMUTH',
     'CCD_BIT_DEPTH',
+    'IMAGE_CALIBRATE_MANUAL_OFFSET',
     'CLAHE_CLIPLIMIT',
     'CLAHE_GRIDSIZE',
     'IMAGE_STRETCH__CLASSNAME',
