--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -785,8 +785,8 @@ var camera_id = {{ camera_id }};
             <div id="IMAGE_CALIBRATE_MANUAL_OFFSET-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Some cameras need a manual offset (libcamera) if darks are not applied.</div>
-            <div>Example: imx477 the offset is 4000 (full 16-bits)</div>
+            <div>Some cameras need a manual offset (libcamera). Only applied if dark calibration is not active.</div>
+            <div>Example: imx477 the offset is 4000 (full 16-bit range)</div>
         </div>
     </div>
 
