--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -664,6 +664,9 @@ $('#form_settime').on('submit', function() {
     </div>
     <div class="col-sm-2">
         <button class="btn btn-info" id="button_backup_db">Backup DB</button>
+        <div style="font-size:10px">
+            indi-allsky service must be running
+        </div>
     </div>
 </div>
 
@@ -698,6 +701,9 @@ $('#form_settime').on('submit', function() {
     </div>
     <div class="col-sm-2">
         <button class="btn btn-warning" id="button_expire_data">Expire Data</button>
+        <div style="font-size:10px">
+            indi-allsky service must be running
+        </div>
     </div>
     <div class="col-sm-2">
         <div>This task is automatically run twice a day, but you may submit a manual task here</div>
