--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -793,6 +793,21 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.IMAGE_CALIBRATE_FIX_HOLES.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.IMAGE_CALIBRATE_FIX_HOLES(class='form-check-input') }}
+                <div id="IMAGE_CALIBRATE_FIX_HOLES-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <div>Fix holes left by dark frame calibration</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.IMAGE_CALIBRATE_MANUAL_OFFSET.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -8004,6 +8019,7 @@ const checkbox_field_names = [
     'IMAGE_STACK_SPLIT',
     'IMAGE_CALIBRATE_DARK',
     'IMAGE_CALIBRATE_BPM',
+    'IMAGE_CALIBRATE_FIX_HOLES',
     'IMAGE_SAVE_FITS_PRE_DARK',
     'THUMBNAILS__IMAGES_AUTO',
     'NIGHT_GRAYSCALE',
