--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -808,6 +808,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.IMAGE_CALIBRATE_HOLE_THOLD.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_CALIBRATE_HOLE_THOLD(class='form-control bg-secondary') }}
+            <div id="IMAGE_CALIBRATE_HOLE_THOLD-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Percentage of max ADU for fixing holes left by dark frames [default: 25%]</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.IMAGE_CALIBRATE_MANUAL_OFFSET.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -7562,6 +7575,7 @@ const field_names = [
     'CCD_EXPOSURE_TIMEOUT',
     'CCD_BIT_DEPTH',
     'IMAGE_CALIBRATE_MANUAL_OFFSET',
+    'IMAGE_CALIBRATE_HOLE_THOLD',
     'EXPOSURE_PERIOD',
     'EXPOSURE_PERIOD_DAY',
     'FOCUS_DELAY',
