--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -816,7 +816,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
-            <div>Fix holes left by dark frame calibration</div>
+            <div>Fix holes left by dark frame calibration (BETA)</div>
         </div>
     </div>
 
