--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5358,7 +5358,9 @@ var camera_id = {{ camera_id }};
                 <div id="S3UPLOAD__ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">
+            <div>Images, panoramas, timelapses, startrails, and keograms will be uploaded to Object Storage</div>
+        </div>
     </div>
 
     <hr>
