--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -844,7 +844,7 @@ var camera_id = {{ camera_id }};
             <div id="TARGET_ADU-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Target Average Image Brightness - Max value: 255</div>
+            <div>Target Average Image Brightness - Max value: 255 [8-bit]</div>
             <div>Default: 75 (~30% of histogram)</div>
         </div>
     </div>
@@ -3377,7 +3377,7 @@ var camera_id = {{ camera_id }};
             {{ form_config.STARTRAILS_MAX_ADU(class='form-control bg-secondary') }}
             <div id="STARTRAILS_MAX_ADU-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Max average image brightness to include in star trails.  This should be at least 10 ADUs less than your target ADU.</div>
+        <div class="col-sm-8">Max average image brightness (8-bit) to include in star trails.  This should be at least 10 ADUs less than your target ADU.</div>
     </div>
 
     <div class="form-group row">
