--- a/indi_allsky/flask/templates/lag.html
+++ b/indi_allsky/flask/templates/lag.html
@@ -17,8 +17,9 @@ var camera_id = {{ camera_id }};
     <div class="col-1 fw-bold">ID</div>
     <div class="col-2 fw-bold">Date</div>
     <div class="col-2 fw-bold">Exposure</div>
-    <div class="col-1 fw-bold">Diff</div>
     <div class="col-1 fw-bold">Elapsed</div>
+    <div class="col-1 fw-bold">Delta</div>
+    <div class="col-1 fw-bold">Period</div>
     <div class="col-1 fw-bold">Processing</div>
 </div>
 {% for image in image_lag_list %}
@@ -26,8 +27,9 @@ var camera_id = {{ camera_id }};
     <div class="col-1">{{ image.id }}</div>
     <div class="col-2">{{ image.createDate.strftime('%Y-%m-%d %H:%M:%S') }}</div>
     <div class="col-2">{{ "%0.7f"|format(image.exposure) }}</div>
-    <div class="col-1">{{ image.lag_diff }}</div>
     <div class="col-1">{{ "%0.2f"|format(image.exp_elapsed | float) }}</div>
+    <div class="col-1">{{ "%0.3f"|format(image.delta | float) }}</div>
+    <div class="col-1">{{ image.lag_diff }}</div>
     <div class="col-1">{{ "%0.2f"|format(image.process_elapsed | float) }}</div>
 </div>
 {% endfor %}
