convert rolling adu view to text table

--- a/indi_allsky/flask/templates/support_info.html
+++ b/indi_allsky/flask/templates/support_info.html
@@ -40,7 +40,7 @@ Support info can be pasted directly into an issue
 <div class="row">
     <div class="col-sm-12">
       <pre>
-        <textarea id="support_info" rows="30" style="width:95%;background-color:#cccccc;">Loading...</textarea>
+        <textarea id="support_info" rows="30" style="width:95%;background-color:#888888;">Loading...</textarea>
       </pre>
     </div>
 </div>
