--- a/indi_allsky/flask/templates/adu.html
+++ b/indi_allsky/flask/templates/adu.html
@@ -4,7 +4,11 @@
 
 {% block head %}
 <style>
+pre {
+    white-space: pre-wrap;
+}
 </style>
+<script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/clipboard.min.js') }}"></script>
 <script type="text/javascript">
 var camera_id = {{ camera_id }};
 </script>
@@ -12,25 +16,36 @@ var camera_id = {{ camera_id }};
 {% endblock %}
 
 {% block content %}
-<h4>Image stats in 15 minute blocks</h4>
 <div class="container">
-<div class="row">
-    <div class="col-sm-2 fw-bold">Date</div>
-    <div class="col-sm-1 fw-bold">Count</div>
-    <div class="col-sm-2 fw-bold">Exposure Avg</div>
-    <div class="col-sm-1 fw-bold">ADU Avg</div>
-    <div class="col-sm-1 fw-bold">SQM Avg</div>
-    <div class="col-sm-1 fw-bold">Stars Avg</div>
+
+<div class="col-sm-2">
+    <span class="badge pill bg-primary copy-clipboard" style="cursor: pointer;" data-clipboard-target="#rolling_adu_info">Copy to Clipboard</span>
 </div>
-{% for adu in rolling_adu_list %}
-<div class="row">
-    <div class="col-sm-2">{{ adu.dt.strftime('%Y-%m-%d %H:%M') }}</div>
-    <div class="col-sm-1">{{ adu.i_count }}</div>
-    <div class="col-sm-2">{{ "%0.4f"|format(adu.exposure_avg) }}</div>
-    <div class="col-sm-1">{{ "%0.2f"|format(adu.adu_avg) }}</div>
-    <div class="col-sm-1">{{ "%0.2f"|format(adu.sqm_avg) }}</div>
-    <div class="col-sm-1">{{ "%0.1f"|format(adu.stars_avg) }}</div>
+
+<hr>
+
+<h4>Image stats in 15 minute blocks</h4>
+
+<div class="row" style="display:block;">
+    <div class="col-sm-12">
+      <pre>
+        <textarea id="rolling_adu_info" rows="30" style="width:95%;background-color:#888888;">{{ rolling_adu_str }}</textarea>
+      </pre>
+    </div>
 </div>
-{% endfor %}
+
 </div>
+
+<script>
+function init() {
+    new ClipboardJS('.copy-clipboard');
+}
+
+
+$( document ).ready(function() {
+    init();
+});
+
+</script>
+
 {% endblock %}
