--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -211,6 +211,7 @@ function populate_gallery(gallery_data) {
             'class'       : "text-decoration-none",
             'data-exclude' : item['exclude'],
             'data-image_id' : item['id'],
+            'data-ts'     : item['ts'],
         });
         a_tag.appendTo($('#allsky-gallery'));
 
@@ -237,8 +238,32 @@ function populate_gallery(gallery_data) {
 
     lightbox.on('uiRegister', function() {
         lightbox.pswp.ui.registerElement({
+            name: 'mini_timelapse-button',
+            order: 9,
+            title: 'Mini-Timelapse',
+            isButton: true,
+            tagName: 'a',
+
+            // SVG with outline
+            html: {
+              isCustomSVG: true,
+              inner: '<path d="M0 1a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1zm4 0v6h8V1zm8 8H4v6h8zM1 1v2h2V1zm2 3H1v2h2zM1 7v2h2V7zm2 3H1v2h2zm-2 3v2h2v-2zM15 1h-2v2h2zm-2 3v2h2V4zm2 3h-2v2h2zm-2 3v2h2v-2zm2 3h-2v2h2z"/>',
+            },
+
+            onInit: (el, pswp) => {
+              el.setAttribute('target', '_blank');
+              el.setAttribute('rel', 'noopener');
+
+              pswp.on('change', () => {
+                //console.log('change');
+                el.href = "{{ url_for('indi_allsky.mini_generate_view') }}?image_id=" + pswp.currSlide.data.element.getAttribute("data-image_id");
+              });
+            }
+        });
+
+        lightbox.pswp.ui.registerElement({
             name: 'download-button',
-            order: 8,
+            order: 9,
             title: 'Download',
             isButton: true,
             tagName: 'a',
@@ -263,8 +288,57 @@ function populate_gallery(gallery_data) {
         });
 
         lightbox.pswp.ui.registerElement({
-            name: 'exclude-button',
+            name: 'loop-button',
+            order: 8,
+            title: 'Loop',
+            isButton: true,
+            tagName: 'a',
+
+            // SVG with outline
+            html: {
+              isCustomSVG: true,
+              inner: '<path d="M11 5.466V4H5a4 4 0 0 0-3.584 5.777.5.5 0 1 1-.896.446A5 5 0 0 1 5 3h6V1.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384l-2.36 1.966a.25.25 0 0 1-.41-.192m3.81.086a.5.5 0 0 1 .67.225A5 5 0 0 1 11 13H5v1.466a.25.25 0 0 1-.41.192l-2.36-1.966a.25.25 0 0 1 0-.384l2.36-1.966a.25.25 0 0 1 .41.192V12h6a4 4 0 0 0 3.585-5.777.5.5 0 0 1 .225-.67Z"/>',
+            },
+
+            onInit: (el, pswp) => {
+              el.setAttribute('target', '_blank');
+              el.setAttribute('rel', 'noopener');
+
+              pswp.on('change', () => {
+                //console.log('change');
+                el.href = "{{ url_for('indi_allsky.image_loop_view') }}?timestamp=" + pswp.currSlide.data.element.getAttribute("data-ts");
+              });
+            }
+        });
+
+        lightbox.pswp.ui.registerElement({
+            name: 'chart-button',
             order: 7,
+            title: 'Chart',
+            isButton: true,
+            tagName: 'a',
+
+            // SVG with outline
+            html: {
+              isCustomSVG: true,
+              inner: '<path fill-rule="evenodd" d="M0 0h1v15h15v1H0V0Zm14.817 3.113a.5.5 0 0 1 .07.704l-4.5 5.5a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61 4.15-5.073a.5.5 0 0 1 .704-.07Z"/>',
+            },
+
+            onInit: (el, pswp) => {
+              el.setAttribute('target', '_blank');
+              el.setAttribute('rel', 'noopener');
+
+              pswp.on('change', () => {
+                //console.log('change');
+                el.href = "{{ url_for('indi_allsky.chart_view') }}?timestamp=" + pswp.currSlide.data.element.getAttribute("data-ts");
+              });
+            }
+        });
+
+
+        lightbox.pswp.ui.registerElement({
+            name: 'exclude-button',
+            order: 6,
             title: 'Include/Exclude',
             isButton: true,
             tagName: 'a',
@@ -315,6 +389,7 @@ function populate_gallery(gallery_data) {
                 }
             }
         });
+
     });
 
     //lightbox.addFilter('uiElement', (el, data) => {
