--- a/indi_allsky/flask/templates/gallery.html
+++ b/indi_allsky/flask/templates/gallery.html
@@ -262,6 +262,30 @@ function populate_gallery(gallery_data) {
         });
 
         lightbox.pswp.ui.registerElement({
+            name: 'image-button',
+            order: 9,
+            title: 'Image',
+            isButton: true,
+            tagName: 'a',
+
+            // SVG with outline
+            html: {
+              isCustomSVG: true,
+              inner: '<path d="M.002 3a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-12a2 2 0 0 1-2-2V3zm1 9v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V9.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12zm5-6.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0z"/>',
+            },
+
+            onInit: (el, pswp) => {
+              el.setAttribute('target', '_blank');
+              el.setAttribute('rel', 'noopener');
+
+              pswp.on('change', () => {
+                //console.log('change');
+                el.href = "{{ url_for('indi_allsky.timelapse_image_view')}}?id=" + pswp.currSlide.data.element.getAttribute("data-image_id");
+              });
+            }
+        });
+
+        lightbox.pswp.ui.registerElement({
             name: 'download-button',
             order: 9,
             title: 'Download',
